[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "maraboupy"
version = "2023.1001"
authors = [{ name = "Wen Kokke", email = "wenkokke@users.noreply.github.com" }]
description = "A package wrapping Marabou for Vehicle."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.5"

[tool.setuptools]
packages = ["maraboupy"]

[tool.bumpver]
current_version = "v2023.1001"
version_pattern = "vYYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{pep440_version}"$',
  '^current_version = "{version}"$'
]

[tool.cibuildwheel]
archs = ["auto64"]
build-frontend = "build"
# Disable building PyPy wheels on all platforms
skip = "pp*"
test-requires = [
  "pytest>=7.2.1, <8",
  "pytest-cov>=4.0.0, <5",
  "numpy>=1.21.0, <2",
  "tensorflow>=2.10.0, <3",
  "onnx>=1.12.0, <2",
  "onnxruntime>=1.12.0, <2",
  "torch>=1.11.0, <2",
]
test-command = "pytest {package}/maraboupy/test"

[tool.cibuildwheel.linux]
before-all = "yum install -y wget"
