[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "maraboupy"
version = "2023.1001"
authors = [{ name = "Wen Kokke", email = "wenkokke@users.noreply.github.com" }]
description = "A package wrapping Marabou for Vehicle."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
  "pytest>=7.2.1,<8",
  "pytest-cov>=4.0.0,<5",
  "numpy>=1.21.0,<2",
  "tensorflow>=2.10.0,<3",
  "onnx>=1.12.0,<2",
  "onnxruntime>=1.12.0,<2",
  "torch>=1.11.0,<2",
]

[tool.setuptools]
packages = ["maraboupy"]

[tool.bumpver]
current_version = "v2023.1001"
version_pattern = "vYYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{pep440_version}"$',
  '^current_version = "{version}"$'
]

[tool.cibuildwheel]
archs = ["auto64"]
build-frontend = "build"
# Disable building PyPy wheels on all platforms
skip = "pp*"
# 2023-04-16: Disable tests:
# test-command = "pytest {package}/maraboupy/test"
test-extras = ["test"]
test-skip = [
  # 2023-04-15: onnxruntime does not support Python 3.11
  "cp311-*"
]

[tool.cibuildwheel.linux]
before-all = "yum install -y wget"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
test-skip = [
  # 2023-04-15: torch 1.13.1 does not support Python 3.11 on macOS
  "cp311-macosx*",
  # Skip trying to test arm64 builds on Intel Macs
  "*-macosx_arm64",
  "*-macosx_universal2:arm64"
]
